carcass for app is implemented (react-redux,reducers,common components, routes, adaptivity, necessary libraries)

--- a/src/main/ui/routes/home/Home.module.scss
+++ b/src/main/ui/routes/home/Home.module.scss
@@ -1,8 +1,10 @@
-@import '../../../styles/sass/mixins';
+@import '../../../../styles/sass/mixins';
 
 .home {
-  height: 100vh;
-  width: 100vw;
+  //height: 100vh;
+  //width: 100vw;
+  height: 100%;
+  width: 100%;
   @include flex;
 
   .particles {
