--- a/src/main/ui/header/header.module.scss
+++ b/src/main/ui/header/header.module.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/sass/variables';
-
+@import '../../../styles/sass/mixins';
 
 * {
   box-sizing: border-box;
@@ -64,6 +64,13 @@
 
       & li {
         cursor: pointer;
+        position: relative;
+
+        &:hover {
+          & .sub_menu_wrapper {
+            visibility: visible;
+          }
+        }
 
 
         .link {
@@ -102,10 +109,27 @@
                 width: calc(100% - 2.2em);
               }
             }
+
+            & .arrow_down {
+              color: $mainColor;
+            }
+
           }
 
+          &:active, &:focus {
+            & .arrow_down {
+              color: $mainColor;
+            }
+          }
 
         }
+
+
+        .arrow_down {
+          transition: all 0.5s ease-in-out;
+          color: #ffffff;
+        }
+
 
         .active_link {
           color: $mainColor;
@@ -117,153 +141,249 @@
             }
           }
 
-            &:after {
-              background-color: $mainColor;
-              width: 100%;
-              @media (min-width: 992px) {
-                width: calc(100% - 2.2em);
-              }
+          &:after {
+            background-color: $mainColor;
+            width: 100%;
+            @media (min-width: 992px) {
+              width: calc(100% - 2.2em);
+            }
+          }
+        }
+
+      }
+
+      .sub_menu_wrapper {
+        visibility: hidden;
+        position: absolute;
+        transition: all 0.5s ease-in-out;
+        //background-color: #1e2326;
+        width: 100%;
+        color: #ffffff;
+        margin-top: 10%;
+        display: block !important;
+        left: 0;
+        top: 100%;
+        @include flex();
+
+        & li {
+          @include flex();
+          //border-bottom: 1px solid $mainColor;
+
+          .sub_link {
+            text-decoration: none;
+            color: #ffffff;
+            transition: all 0.5s ease-in-out;
+            font-size: .9em;
+
+            &:hover {
+              color: $mainColor;
             }
           }
 
         }
-
-      }
-
-
-
-
-
-      .btn_toggler {
-        display: none;
-        cursor: pointer;
-        background: transparent;
-        border: none;
-        outline: none;
-        padding: .25rem .75rem;
-        font-size: 1.25rem;
-        line-height: 1;
-        border-radius: .25rem;
-        text-transform: none;
-        overflow: visible;
-        @media (max-width: 992px) {
-          display: block;
-        }
-        @media (min-width: 992px) {
-          display: none;
-        }
-
-        & span {
-          width: 48px;
-          height: 3px;
-          background-color: #F0F0F0;
-          display: block;
-          margin-bottom: 8px;
-          transition: all 0.3s ease-in-out;
-          font-size: 1.25rem;
-          line-height: 1;
-        }
-      }
-
-      .btn_collapse {
-        display: none;
-        cursor: pointer;
-        background: transparent;
-        border: none;
-        outline: none;
-        padding: .25rem .75rem;
-        font-size: 1.25rem;
-        line-height: 1;
-        border-radius: .25rem;
-        text-transform: none;
-        overflow: visible;
-        @media (max-width: 992px) {
-          display: block;
-        }
-        @media (min-width: 992px) {
-          display: none;
-        }
-
-        & span:nth-child(1) {
-          cursor: pointer;
-          transform: translate(0, 11px) rotate(45deg);
-          transition: all 0.3s ease-in-out;
-          width: 48px;
-          height: 3px;
-          background-color: #F0F0F0;
-          display: block;
-          margin-bottom: 8px;
-        }
-
-        & span:nth-child(2) {
-          width: 0;
-          height: 3px;
-          background-color: #F0F0F0;
-          display: block;
-          margin-bottom: 8px;
-        }
-
-        & span:nth-child(3) {
-          cursor: pointer;
-          transform: translate(0, -11px) rotate(-45deg);
-          transition: all 0.3s ease-in-out;
-          width: 48px;
-          height: 3px;
-          background-color: #F0F0F0;
-          display: block;
-        }
-
       }
 
     }
 
-    .vertical_navbar {
-      transition: all 0.7s ease-in-out;
-      background-color: #1e2326;
 
-      text-decoration: none;
-      list-style-type: none;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 0 15px;
-
+    .btn_toggler {
+      display: none;
+      cursor: pointer;
+      background: transparent;
+      border: none;
+      outline: none;
+      padding: .25rem .75rem;
+      font-size: 1.25rem;
+      line-height: 1;
+      border-radius: .25rem;
+      text-transform: none;
+      overflow: visible;
       @media (max-width: 992px) {
-        margin-left: 6%;
+        display: block;
       }
       @media (min-width: 992px) {
         display: none;
       }
 
+      & span {
+        width: 48px;
+        height: 3px;
+        background-color: #F0F0F0;
+        display: block;
+        margin-bottom: 8px;
+        transition: all 0.3s ease-in-out;
+        font-size: 1.25rem;
+        line-height: 1;
+      }
+    }
 
-      & li {
+    .btn_collapse {
+      display: none;
+      cursor: pointer;
+      background: transparent;
+      border: none;
+      outline: none;
+      padding: .25rem .75rem;
+      font-size: 1.25rem;
+      line-height: 1;
+      border-radius: .25rem;
+      text-transform: none;
+      overflow: visible;
+      @media (max-width: 992px) {
+        display: block;
+      }
+      @media (min-width: 992px) {
+        display: none;
+      }
 
-        & .link {
+      & span:nth-child(1) {
+        cursor: pointer;
+        transform: translate(0, 11px) rotate(45deg);
+        transition: all 0.3s ease-in-out;
+        width: 48px;
+        height: 3px;
+        background-color: #F0F0F0;
+        display: block;
+        margin-bottom: 8px;
+      }
 
-          text-decoration: none;
-          color: #ffffff;
-          padding: 6px 15px;
-          font-size: 1em;
-          transition: all 0.5s ease-in-out;
-          display: block;
-          position: relative;
-          background-color: transparent;
+      & span:nth-child(2) {
+        width: 0;
+        height: 3px;
+        background-color: #F0F0F0;
+        display: block;
+        margin-bottom: 8px;
+      }
 
-          &:hover, &:active {
-            color: $mainColor;
-          }
-        }
+      & span:nth-child(3) {
+        cursor: pointer;
+        transform: translate(0, -11px) rotate(-45deg);
+        transition: all 0.3s ease-in-out;
+        width: 48px;
+        height: 3px;
+        background-color: #F0F0F0;
+        display: block;
+      }
 
-        .active_link{
+    }
+
+  }
+
+  .vertical_navbar {
+    transition: all 0.7s ease-in-out;
+    background-color: #1e2326;
+
+    text-decoration: none;
+    list-style-type: none;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0 15px;
+
+    @media (max-width: 992px) {
+      margin-left: 6%;
+    }
+    @media (min-width: 992px) {
+      display: none;
+    }
+
+
+    & li {
+      position: relative;
+
+
+      & .link {
+
+        text-decoration: none;
+        color: #ffffff;
+        padding: 6px 15px;
+        font-size: 1em;
+        transition: all 0.5s ease-in-out;
+        display: block;
+        position: relative;
+        background-color: transparent;
+
+        &:hover, &:active {
           color: $mainColor;
+        }
+      }
+
+      .active_link {
+        color: $mainColor;
+      }
+
+      .features_vertical_sub_menu_wrapper {
+        visibility: hidden;
+        border: 1px solid #F0F0F0;
+        position: absolute;
+        z-index: 1000;
+        top: 0;
+        left: 100%;
+        transition: all 0.5s ease-in-out;
+        width: 100%;
+        color: #ffffff;
+        margin-top: 10%;
+        display: block !important;
+        @include flex();
+
+        & li {
+          @include flex();
+
+          .sub_link {
+            text-decoration: none;
+            color: #ffffff;
+            transition: all 0.5s ease-in-out;
+            font-size: .9em;
+
+            &:hover {
+              color: $mainColor;
+            }
+          }
+
         }
 
 
       }
+
+      .settings_vertical_sub_menu_wrapper {
+        visibility: hidden;
+        border: 1px solid #F0F0F0;
+        position: absolute;
+        z-index: 1000;
+        top: 0;
+        left: 100%;
+        transition: all 0.5s ease-in-out;
+        width: 100%;
+        color: #ffffff;
+        margin-top: 10%;
+        display: block !important;
+        @include flex();
+
+        & li {
+          @include flex();
+
+          .sub_link {
+            text-decoration: none;
+            color: #ffffff;
+            transition: all 0.5s ease-in-out;
+            font-size: .9em;
+
+            &:hover {
+              color: $mainColor;
+            }
+          }
+
+        }
+
+
+      }
+
+
     }
-
-
   }
+
+
+}
 
