init: implementation of login functionality is started, login request is implemented

--- a/src/features/f0-test/Feature0.module.scss
+++ b/src/features/f0-test/Feature0.module.scss
@@ -20,13 +20,16 @@
     flex-wrap: wrap;
     .input_wrapper{
       margin-left: 5%;
+      margin-bottom: 10%;
     }
 
     .btn_wrapper {
       margin-left: 5%;
+      margin-bottom: 10%;
     }
 
     .checkbox_wrapper{
+      margin-bottom: 10%;
 
     }
   }
