--- a/src/main/ui/header/header.module.scss
+++ b/src/main/ui/header/header.module.scss
@@ -272,7 +272,8 @@
   .vertical_navbar {
     position: relative;
     transition: all 0.7s ease-in-out;
-    background-color: #1e2326;
+    //background-color: #1e2326;
+    background-color: #1f4258;
 
     text-decoration: none;
     list-style-type: none;
@@ -284,7 +285,7 @@
     padding: 0 15px;
 
     @media (max-width: 992px) {
-      margin-left: 6%;
+      margin: 0 6%;
     }
     @media (min-width: 992px) {
       display: none;
