--- a/src/main/ui/routes/login/Login.module.scss
+++ b/src/main/ui/routes/login/Login.module.scss
@@ -9,7 +9,7 @@
 
   .login_form {
     position: relative;
-    z-index: 1000;
+    //z-index: 1000;
     margin-top: 30px;
     width: 450px;
     height: 450px;
@@ -73,6 +73,24 @@
       }
 
 
+    }
+
+
+
+
+    .credentials{
+      position: absolute;
+      top: -5vh;
+      left: 0;
+      display: flex;
+      //flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      color: red;
+      p:first-of-type{
+        margin-right: 10px;
+      }
     }
 
   }
