feat: implement name and avatr changing

--- a/src/main/ui/common/preloader/Preloader.module.css
+++ b/src/main/ui/common/preloader/Preloader.module.css
@@ -1,8 +1,8 @@
 
 
 .preloader{
-    position: absolute;
-    z-index: 100;
-    top: 30%;
-    left: 45%;
+    /*position: absolute;*/
+    /*z-index: 100;*/
+    /*top: 30%;*/
+    /*left: 45%;*/
 }
