--- a/src/main/ui/header/header.module.scss
+++ b/src/main/ui/header/header.module.scss
@@ -11,10 +11,11 @@
   right: 0;
   left: 0;
   z-index: 1000;
+  background-color: transparent;
 
   width: 100%;
   padding: 17px 0;
-  background-color: #1e2326;
+  //background-color: #1e2326;
 
 
   .container {
