--- a/src/main/ui/routes/profile/Profile.module.scss
+++ b/src/main/ui/routes/profile/Profile.module.scss
@@ -33,11 +33,46 @@
 
       .avatar {
         margin: 0 20%;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
       }
 
       .profile_info_header_content{
 
 
+        .profile_info_change_btn{
+
+          font-size: 16px;
+          color: white;
+          width: 100px;
+          height: 25px;
+          cursor: pointer;
+          outline: none;
+          border: none;
+          border-radius: 4px;
+          background-color: #1f4258;
+          transition: all .5s ease-in-out;
+          &:hover{
+            background-color: darkcyan;
+          }
+        }
+
+        .profile_info_save_btn{
+          font-size: 16px;
+          color: white;
+          width: 100px;
+          height: 25px;
+          cursor: pointer;
+          outline: none;
+          border: none;
+          border-radius: 4px;
+          background-color: #1f4258;
+          transition: all .5s ease-in-out;
+          &:hover{
+            background-color: darkcyan;
+          }
+        }
 
 
       }
