--- a/src/main/ui/routes/register/Register.module.scss
+++ b/src/main/ui/routes/register/Register.module.scss
@@ -26,6 +26,7 @@
             height: 300px;
         }
         h2 {
+            color: white;
             font-size: 28px;
             font-weight: 500;
             text-transform: uppercase;
