--- a/src/main/ui/routes/settings/newPassword/NewPassword.module.scss
+++ b/src/main/ui/routes/settings/newPassword/NewPassword.module.scss
@@ -28,6 +28,7 @@
             height: 300px;
         }
         h2 {
+            color: white;
             font-size: 28px;
             font-weight: 500;
             text-transform: uppercase;
