--- a/src/main/ui/routes/settings/passwordRestore/PasswordRestore.module.scss
+++ b/src/main/ui/routes/settings/passwordRestore/PasswordRestore.module.scss
@@ -27,6 +27,8 @@
             height: 300px;
         }
         h2 {
+            color: white;
+            text-align: center;
             font-size: 28px;
             font-weight: 500;
             text-transform: uppercase;
