--- a/src/main/ui/routes/packs/Packs.module.scss
+++ b/src/main/ui/routes/packs/Packs.module.scss
@@ -9,9 +9,52 @@
   width: 100%;
   height: 100%;
 
-  .add_btn{
-    align-self: flex-start;
+
+  .pack_settings {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    @media (max-width: 992px) {
+      flex-direction: column;
+    }
+
+    .add_btn {
+      align-self: flex-end;
+      margin-bottom: 10px;
+      @media (max-width: 992px) {
+        align-self: center;
+      }
+    }
+
+    .twice_slider {
+      width: 20%;
+      @media (max-width: 992px) {
+        width: 40%;
+      }
+      & h4{
+        color:white;
+        text-align: center;
+      }
+    }
+
+    .search_wrapper{
+
+      .search_checkbox{
+        padding-left: 4px;
+        color: white;
+      }
+      .search{
+        padding-left: 4px;
+        //width: 300px;
+      }
+    }
+
+
+
   }
+
 
   .table {
     overflow: auto;
@@ -25,7 +68,7 @@
 }
 
 
-.editableRow .ant-form-item-explain{
+.editableRow .ant-form-item-explain {
   position: absolute;
   top: 100%;
   font-size: 12px;
